完成用户相关

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
 mybatis-plus.configuration.map-underscore-to-camel-case=true
+
+server.port=9999
