整合部分RabbitMQ，完成评论功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,9 @@ server.tomcat.uri-encoding=UTF-8
 
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 
-server.port=9999
+#server.port=9999
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
