完成大体设计

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,6 +18,10 @@ spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
 mybatis-plus.configuration.map-underscore-to-camel-case=true
+logging.level.com.dm.ticket.mapper=debug
+
+
+server.port=9999
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
@@ -25,5 +29,3 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 spring.cache.jcache.config=classpath:ehcache.xml
-
-#spring.profiles.active=dev
